src/rabbitmq/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
spec:
    selector:
        app: rabbitmq
    type: ClusterIP
    ports:
        - name: http
          port: 15672
          targetPort: 15672
          protocol: TCP
        - name: amqp
          port: 5672
          targetPort: 5672
          protocol: TCP
